--- a/.pipelex/inference/deck/overrides.toml
+++ b/.pipelex/inference/deck/overrides.toml
@@ -17,3 +17,7 @@
 [llm.choice_overrides]
 for_text = "disabled"
 for_object = "disabled"
+
+[llm.presets]
+
+llm_to_engineer = { model = "meta-llama/llama-4-scout-17b-16e-instruct", temperature = 0.2 }
