--- a/.pipelex/pipelex.toml
+++ b/.pipelex/pipelex.toml
@@ -50,10 +50,10 @@ excluded_dirs = [
 # default_directory_base_name = "pipeline"
 
 [pipelex.log_config]
-default_log_level = "INFO"
+default_log_level = "DEBUG"
 
 [pipelex.log_config.package_log_levels]
-pipelex = "INFO"
+pipelex = "DEBUG"
 
 [cogt]
 [cogt.model_deck_config]
